update post and commment react
