# app/Http/Controllers/Api/UserController.php
@@ -13,34 +13,44 @@ use Illuminate\Support\Js;
 
 class UserController extends Controller
 {
-/**
- * @OA\Get(
- *     path="/api/profile",
- *     summary="Get the authenticated user's details",
- *     tags={"User"},
- *     security={
- *         {"bearerAuth": {}}
- *     },
- *     @OA\Response(
- *         response=200,
- *         description="User profile details  successfully",
- *         @OA\JsonContent(
- *             @OA\Property(property="id", type="integer"),
- *             @OA\Property(property="name", type="string"),
- *             @OA\Property(property="email", type="string"),
- *             @OA\Property(property="created_at", type="string"),
- *             @OA\Property(property="updated_at", type="string")
- *         )
- *     ),
- *     @OA\Response(
- *         response=401,
- *         description="Unauthenticated",
- *         @OA\JsonContent(
- *             @OA\Property(property="error", type="string")
- *         )
- *     )
- * )
- */
+    /**
+     * @OA\Get(
+     *     path="/api/profile",
+     *     summary="Get the authenticated user's details",
+     *     tags={"User"},
+     *     security={
+     *         {"bearerAuth": {}}
+     *     },
+     *     @OA\Response(
+     *         response=200,
+     *         description="User profile details successfully retrieved",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="id", type="integer"),
+     *             @OA\Property(property="name", type="string"),
+     *             @OA\Property(property="email", type="string"),
+     *             @OA\Property(property="created_at", type="string"),
+     *             @OA\Property(property="updated_at", type="string")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthenticated",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="error", type="string", example="Unauthenticated")
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="Authorization",
+     *         in="header",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="string",
+     *             example="Bearer {token}"
+     *         ),
+     *         description="Bearer token for authentication"
+     *     )
+     * )
+     */
     public function show(Request $request)
     {
         if (Auth::check()) {
@@ -49,46 +59,68 @@ class UserController extends Controller
             return response()->json(['error' => 'Unauthenticated'], 401);
         }
     }
-
 /**
- * @OA\Put(
- *     path="/api/profile/update",
- *     summary="Update the authenticated user's profile",
- *     tags={"User"},
- *     security={
- *         {"bearerAuth": {}}
- *     },
- *     @OA\RequestBody(
- *         required=true,
- *         description="Updated user information",
- *         @OA\JsonContent(
- *             required={"name","email"},
- *             @OA\Property(property="name", type="string"),
- *             @OA\Property(property="email", type="string"),
- *             @OA\Property(property="profile_image", type="string")
- *         )
- *     ),
- *     @OA\Response(
- *         response=200,
- *         description="Profile updated successfully",
- *         @OA\JsonContent(
- *             @OA\Property(property="message", type="string", example="Profile updated successfully")
- *         )
- *     ),
- *     @OA\Response(
- *         response=400,
- *         description="Validation error",
- *         @OA\JsonContent(
- *             @OA\Property(property="error", type="object",
- *                 @OA\AdditionalProperties(
- *                     type="array",
- *                     @OA\Items(type="string")
- *                 )
- *             )
- *         )
- *     )
- * )
- */
+     * @OA\Post(
+     *     path="/api/profile/update",
+     *     summary="Update the authenticated user's profile including profile image",
+     *     tags={"User"},
+     *     security={
+     *         {"bearerAuth": {}}
+     *     },
+     *     @OA\RequestBody(
+     *         required=true,
+     *         description="Updated user information and profile image",
+     *         @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *             @OA\Schema(
+     *                 required={"name", "email"},
+     *                 @OA\Property(
+     *                     property="name",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="email",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="profile_image",
+     *                     type="string",
+     *                     format="binary"
+     *                 ),
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Profile updated successfully",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Profile updated successfully")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Validation error",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="error", type="object",
+     *                 @OA\AdditionalProperties(
+     *                     type="array",
+     *                     @OA\Items(type="string")
+     *                 )
+     *             )
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="Authorization",
+     *         in="header",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="string",
+     *             example="Bearer {token}"
+     *         ),
+     *         description="Bearer token for authentication"
+     *     )
+     * )
+     */
     public function update(Request $request)
     {
         $user = Auth::user();
